[package]
name = "the-tensox-api"
version = "0.1.0"
authors = ["Louis Beaumont <louis.beaumont@gmail.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
ws = "*"
rocket = "0.4"
rocket_codegen = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4"